traffic-management/2-fault-injection/1-virtual-service-fault-injection-time.yaml
# File virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: notification
spec:
  hosts:
  - notification-service
  http:
  - fault:
      delay:
        fixedDelay: 10s
        percentage:
          value: 100
    route:
    - destination:
        host: notification-service
        subset: v1
